--- a/iTunesSearch/TableView.xib
+++ b/iTunesSearch/TableView.xib
@@ -6,22 +6,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewController">
             <connections>
+                <outlet property="btn" destination="KUb-Od-09B" id="QWE-WR-Udk"/>
                 <outlet property="searchDisplayController" destination="3YN-3F-HjU" id="zco-Kf-XM6"/>
-                <outlet property="tableview" destination="z24-IP-C1d" id="fiF-7d-ri3"/>
-                <outlet property="view" destination="z24-IP-C1d" id="NXu-VO-9o4"/>
+                <outlet property="tableview" destination="EWT-Xz-dM7" id="lnN-xV-DBF"/>
+                <outlet property="texto" destination="0ye-KZ-K8N" id="E1F-Hs-5KC"/>
+                <outlet property="view" destination="SFx-XA-cBV" id="q2L-1U-6bO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="42" sectionHeaderHeight="22" sectionFooterHeight="22" id="z24-IP-C1d">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="grn-Rq-4Ux"/>
-                <outlet property="delegate" destination="-1" id="M2x-yu-OMO"/>
-            </connections>
-            <point key="canvasLocation" x="-135" y="440"/>
-        </tableView>
         <searchDisplayController id="3YN-3F-HjU">
             <connections>
                 <outlet property="delegate" destination="-1" id="Pwm-b8-eOM"/>
@@ -30,5 +22,57 @@
                 <outlet property="searchResultsDelegate" destination="-1" id="NSI-zD-0um"/>
             </connections>
         </searchDisplayController>
+        <view contentMode="scaleToFill" id="SFx-XA-cBV">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EWT-Xz-dM7">
+                    <rect key="frame" x="0.0" y="70" width="600" height="530"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
+                </tableView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite o que deseja buscar" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ye-KZ-K8N">
+                    <rect key="frame" x="10" y="30" width="495" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KUb-Od-09B">
+                    <rect key="frame" x="515" y="30" width="75" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Tg0-0P-rLG"/>
+                        <constraint firstAttribute="width" constant="75" id="xpl-Gd-5jz"/>
+                    </constraints>
+                    <state key="normal" title="Buscar">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="buscar:" destination="-1" eventType="touchUpInside" id="I9K-h0-6JT"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="EWT-Xz-dM7" secondAttribute="bottom" id="6rp-S1-wOv"/>
+                <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="KUb-Od-09B" secondAttribute="bottom" constant="20" id="Itz-tT-KV6"/>
+                <constraint firstItem="0ye-KZ-K8N" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="30" id="Izp-R6-5hK"/>
+                <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="70" id="Q9J-Ob-r1p"/>
+                <constraint firstAttribute="trailing" secondItem="EWT-Xz-dM7" secondAttribute="trailing" constant="-20" id="bLA-Rl-mY4"/>
+                <constraint firstItem="0ye-KZ-K8N" firstAttribute="leading" secondItem="SFx-XA-cBV" secondAttribute="leading" constant="10" id="bOE-oS-ujX"/>
+                <constraint firstAttribute="trailing" secondItem="EWT-Xz-dM7" secondAttribute="trailing" id="bjG-YL-Fc8"/>
+                <constraint firstItem="KUb-Od-09B" firstAttribute="leading" secondItem="0ye-KZ-K8N" secondAttribute="trailing" constant="10" id="hGb-iu-Scz"/>
+                <constraint firstItem="KUb-Od-09B" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="30" id="r1P-cg-Gqa"/>
+                <constraint firstAttribute="trailing" secondItem="KUb-Od-09B" secondAttribute="trailing" constant="10" id="sEh-fN-6IO"/>
+                <constraint firstItem="EWT-Xz-dM7" firstAttribute="leading" secondItem="SFx-XA-cBV" secondAttribute="leading" id="vv7-UZ-wrR"/>
+                <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="0ye-KZ-K8N" secondAttribute="bottom" constant="10" id="x7o-p5-U4y"/>
+            </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="Itz-tT-KV6"/>
+                    <exclude reference="bLA-Rl-mY4"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="-98" y="657"/>
+        </view>
     </objects>
 </document>
