--- a/iTunesSearch/Base.lproj/TableView.xib
+++ b/iTunesSearch/Base.lproj/TableView.xib
@@ -26,19 +26,13 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EWT-Xz-dM7">
-                    <rect key="frame" x="0.0" y="70" width="600" height="530"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <inset key="separatorInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
-                </tableView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite o que deseja buscar" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0ye-KZ-K8N">
-                    <rect key="frame" x="10" y="30" width="495" height="30"/>
+                    <rect key="frame" x="10" y="80" width="495" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KUb-Od-09B">
-                    <rect key="frame" x="515" y="30" width="75" height="30"/>
+                    <rect key="frame" x="515" y="80" width="75" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Tg0-0P-rLG"/>
                         <constraint firstAttribute="width" constant="75" id="xpl-Gd-5jz"/>
@@ -50,22 +44,28 @@
                         <action selector="buscar:" destination="-1" eventType="touchUpInside" id="I9K-h0-6JT"/>
                     </connections>
                 </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EWT-Xz-dM7">
+                    <rect key="frame" x="0.0" y="120" width="600" height="480"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="EWT-Xz-dM7" secondAttribute="bottom" id="6rp-S1-wOv"/>
                 <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="KUb-Od-09B" secondAttribute="bottom" constant="20" id="Itz-tT-KV6"/>
-                <constraint firstItem="0ye-KZ-K8N" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="30" id="Izp-R6-5hK"/>
-                <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="70" id="Q9J-Ob-r1p"/>
+                <constraint firstItem="0ye-KZ-K8N" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="80" id="Izp-R6-5hK"/>
                 <constraint firstAttribute="trailing" secondItem="EWT-Xz-dM7" secondAttribute="trailing" constant="-20" id="bLA-Rl-mY4"/>
                 <constraint firstItem="0ye-KZ-K8N" firstAttribute="leading" secondItem="SFx-XA-cBV" secondAttribute="leading" constant="10" id="bOE-oS-ujX"/>
                 <constraint firstAttribute="trailing" secondItem="EWT-Xz-dM7" secondAttribute="trailing" id="bjG-YL-Fc8"/>
                 <constraint firstItem="KUb-Od-09B" firstAttribute="leading" secondItem="0ye-KZ-K8N" secondAttribute="trailing" constant="10" id="hGb-iu-Scz"/>
-                <constraint firstItem="KUb-Od-09B" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="30" id="r1P-cg-Gqa"/>
+                <constraint firstItem="KUb-Od-09B" firstAttribute="top" secondItem="SFx-XA-cBV" secondAttribute="top" constant="80" id="r1P-cg-Gqa"/>
                 <constraint firstAttribute="trailing" secondItem="KUb-Od-09B" secondAttribute="trailing" constant="10" id="sEh-fN-6IO"/>
                 <constraint firstItem="EWT-Xz-dM7" firstAttribute="leading" secondItem="SFx-XA-cBV" secondAttribute="leading" id="vv7-UZ-wrR"/>
                 <constraint firstItem="EWT-Xz-dM7" firstAttribute="top" secondItem="0ye-KZ-K8N" secondAttribute="bottom" constant="10" id="x7o-p5-U4y"/>
             </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="Itz-tT-KV6"/>
